fixed favicon coloring for light and dark mode

--- a/src/css/Wordsmith.css
+++ b/src/css/Wordsmith.css
@@ -19,18 +19,6 @@
     --black: #000;
     --chilired: #E92E1D;
     --fireenginered: #D22617;
-
-    --red: #DB514F;
-    --firebrick: #B0302E;
-    --aerospaceorange: #FF5300;
-    --orangepeel: #FBA225;
-    --orange: #FA864C;
-    --tawny: #CE5E26;
-    --columbiablue: #C9E6F0;
-    --skyblue: #8FCCE0;
-    --carolinablue: #78B3CE;
-    --airforceblue: #5B899F;
-    --antiflashwhite: #EBEBEB;
     --davysgray: #494845;
 
     --shadow-offset: 0.3rem;
@@ -117,7 +105,6 @@ footer a {
 }
 
 /* ------------------------------------ - ----------------------------------- */
-
 @media (prefers-color-scheme: dark) {
     html {
         background-color: var(--jet);
@@ -210,34 +197,25 @@ footer a {
 /* -------------------------------------------------------------------------- */
 /*                              Responsive Design                             */
 /* -------------------------------------------------------------------------- */
-/* Desktops */
-@media screen and (min-width: 582px) and (min-width: 933px) {
+/* show viewport warning for devices smaller than landscape iPad Pro 11 */
+@media screen and (max-width: 831px) { 
     #viewport-warning {
+        display: block; 
+    }
+
+    #wordsmith {
         display: none;
     }
 }
 
-/* iPhone 14 Pro Max - Landscape */
-@media screen and (max-width: 932px) {
-    #wordsmith {
-        width: 100vw;
+/* hide viewport warning for larger devices */
+@media screen and (min-width: 832px) {
+    #viewport-warning {
+        display: none;
     }
 
-    #viewport-warning {
+    #wordsmith {
         display: block;
-    }
-}
-
-/* iPhone 14 Pro Max - Portrait */
-@media screen and (max-width: 581px) and (max-width: 831px) {
-    #wordsmith {
-        display: none;
-    }
-}
-
-/* Pixel 7 Pro */
-@media screen and (max-width: 1040px) and (max-height: 480px) {
-    #wordsmith {
-        width: 100vw;
+        width: 100%;
     }
 }
